@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -34,50 +35,50 @@
 
   <properties>
     <!-- PROJECT-->
-    <log4j.version>2.15.0</log4j.version>
+    <log4j.version>2.17.1</log4j.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <skipTests>true</skipTests>
-    <surefire.version>2.20.1</surefire.version>
+    <surefire.version>2.22.2</surefire.version>
 
     <!-- DEV TOOLS -->
-    <cyclops.version>10.0.0-M7</cyclops.version>
+    <cyclops.version>10.4.0</cyclops.version>
 
     <!-- TESTS -->
-    <junit.version>4.13.1</junit.version>
-    <org.hamcrest.version>1.3</org.hamcrest.version>
-    <io.rest-assured.version>3.3.0</io.rest-assured.version>
+    <junit.version>4.13.2</junit.version>
+    <org.hamcrest.version>2.2</org.hamcrest.version>
+    <io.rest-assured.version>4.4.0</io.rest-assured.version>
 
     <!-- REST AND DROPWIZARD-->
-    <dropwizard.version>1.3.9</dropwizard.version>
-    <dropwizard.swagger.version>1.3.9-1</dropwizard.swagger.version>
-    <zipkin.dropwizard.version>1.3.9-1</zipkin.dropwizard.version>
-    <jackson.version>2.9.8</jackson.version>
-    <swaggerv3.version>2.0.10</swaggerv3.version>
+    <dropwizard.version>2.0.28</dropwizard.version>
+    <dropwizard.swagger.version>2.0.12-1</dropwizard.swagger.version>
+    <zipkin.dropwizard.version>2.0.16-1</zipkin.dropwizard.version>
+    <jackson.version>2.13.1</jackson.version>
+    <swaggerv3.version>2.1.12</swaggerv3.version>
+    <jaxb.version>2.3.5</jaxb.version>
+    <jersey-media-jaxb.version>2.35</jersey-media-jaxb.version>
 
     <!-- CACHE-->
-    <hazelcast.version>4.2.2</hazelcast.version>
-    <hazelcast.k8s.version>2.2.3</hazelcast.k8s.version>
+    <hazelcast.version>5.0.2</hazelcast.version>
 
     <!-- ELASTICSEARCH-->
-    <elastic.version>7.14.2</elastic.version>
-    <elastic-apm.version>1.20.0</elastic-apm.version>
+    <elastic.version>7.15.2</elastic.version>
+    <elastic-apm.version>1.28.4</elastic-apm.version>
 
-    <postgresql.version>42.2.19</postgresql.version>
-    <postgis-jdbc.version>2.5.0</postgis-jdbc.version>
-    <!-- do not upgrade jdbi3-core to 3.19.0 because it needs java 11 to compile -->
-    <jdbi3.version>3.18.1</jdbi3.version>
+    <postgis-jdbc.version>2021.1.0</postgis-jdbc.version>
+    <jdbi3.version>3.26.1</jdbi3.version>
 
     <!-- GEO-->
-    <geotools.version>18.0</geotools.version>
-    <protobuf.version>3.4.0</protobuf.version>
-    <geoapi.version>3.0.1</geoapi.version>
-    <geojson.jackson.version>1.8.1</geojson.jackson.version>
-    <spatial4j.version>0.7</spatial4j.version>
-    <jts.version>1.18.1</jts.version>
+    <geotools.version>26.1</geotools.version>
+    <protobuf.version>3.19.1</protobuf.version>
+    <geojson.jackson.version>1.14</geojson.jackson.version>
+    <spatial4j.version>0.8</spatial4j.version>
+    <jts.version>1.18.2</jts.version>
     <h3.version>3.7.0</h3.version>
 
     <!-- AUTH -->
-    <java-jwt.version>3.8.2</java-jwt.version>
+    <java-jwt.version>3.18.2</java-jwt.version>
+
+    <nv-i18n.version>1.29</nv-i18n.version>
 
     <!-- DOCUMENTATION GENERATION-->
     <swagger2markup.version>1.3.3</swagger2markup.version>
@@ -90,57 +91,31 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
-
-    <!-- ____________________________________________________ -->
-    <!-- DEV -->
-    <!-- ____________________________________________________ -->
-    <dependency>
-      <groupId>com.oath.cyclops</groupId>
-      <artifactId>cyclops</artifactId>
-      <version>${cyclops.version}</version>
-    </dependency>
-    <!-- ____________________________________________________ -->
-    <!-- Tests -->
-    <!-- ____________________________________________________ -->
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- ____________________________________________________ -->
-    <!-- LOGS -->
-    <!-- ____________________________________________________ -->
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>17</release>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.20.1</version>
+        <version>2.22.2</version>
         <configuration>
-          <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
+          <argLine>-Xmx2048m</argLine>
           <skipITs>${skipTests}</skipITs>
         </configuration>
         <executions>
@@ -224,7 +199,7 @@
     <pluginRepository>
       <id>jcenter-snapshots</id>
       <name>jcenter</name>
-      <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+      <url>https://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
     </pluginRepository>
     <pluginRepository>
       <snapshots>
@@ -240,7 +215,7 @@
     <repository>
       <id>maven2-repository.dev.java.net</id>
       <name>Java.net repository</name>
-      <url>http://download.java.net/maven/2</url>
+      <url>https://download.java.net/maven/2</url>
     </repository>
     <repository>
       <id>osgeo</id>
